Bug 735648 Append command char and shifted commanded char when command key is pressed on Dvorak-QWERTY r=smichaud+karlt