widget/cocoa/TextInputHandler.mm
@@ -448,14 +448,20 @@ TISInputSourceWrapper::InitByLayoutID(SInt32 aLayoutID,
     case 0:
       InitByInputSourceID("com.apple.keylayout.US");
       break;
-    case -18944:
+    case 1:
       InitByInputSourceID("com.apple.keylayout.Greek");
       break;
-    case 3:
+    case 2:
       InitByInputSourceID("com.apple.keylayout.German");
       break;
-    case 224:
+    case 3:
       InitByInputSourceID("com.apple.keylayout.Swedish-Pro");
+      break;
+    case 4:
+      InitByInputSourceID("com.apple.keylayout.DVORAK-QWERTYCMD");
+      break;
+    case 5:
+      InitByInputSourceID("com.apple.keylayout.Thai");
       break;
     default:
       Clear();
@@ -876,8 +882,12 @@ TISInputSourceWrapper::InitKeyPressEvent(NSEvent *aNativeKeyEvent,
 
   // If the current keyboard layout is switched by the Cmd key,
   // we should append cmdedChar and shiftedCmdChar that are
-  // Latin char for the key. But don't append at Dvorak-QWERTY.
-  if ((cmdedChar || cmdedShiftChar) && isCmdSwitchLayout && !isDvorakQWERTY) {
+  // Latin char for the key.
+  // If the keyboard layout is Dvorak-QWERTY, we should append them only when
+  // command key is pressed because when command key isn't pressed, uncmded
+  // chars have been appended already.
+  if ((cmdedChar || cmdedShiftChar) && isCmdSwitchLayout &&
+      (aKeyEvent.isMeta || !isDvorakQWERTY)) {
     nsAlternativeCharCode altCharCodes(cmdedChar, cmdedShiftChar);
     aKeyEvent.alternativeCharCodes.AppendElement(altCharCodes);
   }
